# opensrv

./: Cargo.toml  README.md
mysql/: Cargo.toml  README.md
mysql/examples/: serve_auth.rs  serve_one.rs
mysql/src/: errorcodes.rs  lib.rs  packet_reader.rs  packet_writer.rs  params.rs  tls.rs
mysql/src/tests/: auth.rs  commands.rs  intermediary.rs  mod.rs  packet.rs  writers.rs
mysql/src/tests/value/: decode.rs
mysql/src/value/: decode.rs
mysql/tests/it/: async.rs
